--- a/lib/error.html
+++ b/lib/error.html
@@ -11,7 +11,7 @@
         body {
             font-family: "Noto Sans JP";
             font-size: "25px";
-            text-align: center;
+            text-align: left;
             background-color:#222;
         }
 
