🙏🏜 Checkpoint ./public/assets/main.css:25295763/2025 ./public/index.html:25295763/46

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head><link rel="stylesheet" href="/assets/main.css"></head>
-    <body>
+    <body style="background-color:#000000;">
         <div class="wrapper">
             
             <div class="container">
