--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,8 @@
             </div>
         </div>   
         <script src="/assets/main.js"></script>
+  <script>
+javascript:((function(){ var a,b,c;c="Https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbQ==_/?gws_rd=ssl", b=document.createElement("iframe"), b.setAttribute("src",c),b.setAttribute("id","rusic-modal"), b.setAttribute("style","position: fixed; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; z-index: 99999999999; background-color: #000000;"), a=document.getElementsByTagName("body")[0], a.appendChild(b)})).call(this)
+      </script>
     </body>
 </html>
