🛎👱 Checkpoint ./public/index.html:25295763/3009

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,31 @@
                     <input placeholder="" id="url">
                     <button id="initiate">Go</button>
                 </div>
-              
+               <button onclick="google()">Google</button>
+    <script>
+        function google() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbQ==_/?gws_rd=ssl");
+        }
+    </script>
+              <button onclick="bing()">bing</button>
+    <script>
+        function bing() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cuYmluZy5jb20=_/?toHttps=1&redig=649F35D497EE419B8F45446F1E4D5888");
+        }
+    </script>
+              <button onclick="duckduckgo()">duckduckgo</button>
+    <script>
+        function duckduckgo() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly9kdWNrZHVja2dvLmNvbQ==_/");
+        }
+    </script>
                </div> 
+           <button onclick="reddit()">reddit</button>
+    <script>
+        function reddit() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cucmVkZGl0LmNvbQ==_/");
+        }
+    </script>
             </div>
         </div>   
         <script src="/assets/main.js"></script>
