👀👡 Checkpoint ./public/index.html:25295763/699

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,14 @@
         window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cucmVkZGl0LmNvbQ==_/");
         }
     </script>
+           <button onclick="youtube clone()">youtubeclone</button>
+    <script>
+        function reddit() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cucmVkZGl0LmNvbQ==_/");
+        }
+    </script>
             </div>
+      https://iteroni.com/feed/popular
         </div>   
         <script src="/assets/main.js"></script>
     </body>
