🍶🚄 Checkpoint ./public/index.html:25295763/226

--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
         window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cucmVkZGl0LmNvbQ==_/");
         }
     </script>
-           <button onclick="youtube clone()">youtubeclone</button>
+           <button onclick="youtubeclone()">youtube clone</button>
     <script>
-        function reddit() {
-        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cucmVkZGl0LmNvbQ==_/");
+        function youtubeclone() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly9pdGVyb25pLmNvbQ==_/feed/popular");
         }
     </script>
             </div>
