--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,43 @@
             
             <div class="container">
                 <div class="form">
-                    <input placeholer="" id="url">
+                    <input placeholder="" id="url">
                     <button id="initiate">Go</button>
                 </div>
-               
+               <button onclick="google()">Google</button>
+    <script>
+        function google() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbQ==_/?gws_rd=ssl");
+        }
+    </script>
+              <button onclick="bing()">bing</button>
+    <script>
+        function bing() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cuYmluZy5jb20=_/?toHttps=1&redig=649F35D497EE419B8F45446F1E4D5888");
+        }
+    </script>
+              <button onclick="duckduckgo()">duckduckgo</button>
+    <script>
+        function duckduckgo() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly9kdWNrZHVja2dvLmNvbQ==_/");
+        }
+    </script>
+               </div> 
+           <button onclick="reddit()">reddit</button>
+    <script>
+        function reddit() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly93d3cucmVkZGl0LmNvbQ==_/");
+        }
+    </script>
+           <button onclick="youtubeclone()">youtube clone</button>
+    <script>
+        function youtubeclone() {
+        window.open("https://cloud-c.glitch.me/web/_aHR0cHM6Ly9pdGVyb25pLmNvbQ==_/feed/popular");
+        }
+    </script>
+            </div>
+      https://iteroni.com/feed/popular
+        </div>   
         <script src="/assets/main.js"></script>
     </body>
 </html>
